--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,7 +601,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 75vh;
-  /* background: url("../img/mit_bg.jpg") top center; */
+  /* background: url("./25ICCV/hawaii.tiff") top center; */
   background: #d4d8df top center;
   background-size: contain;
   overflow: hidden;
@@ -1338,6 +1338,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #112363;
   font-size: 15px;
   margin-bottom: 10px;
+}
+
+
+#scope {
+  padding: 60px 0 30px 0;
+  background: #f4f7ff;
 }
 
 /*--------------------------------------------------------------
