--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3120,3 +3120,10 @@ SETTINGS
   color: #fff; /* Text color */
   margin: 16px 0; /* Add vertical spacing */
 }
+
+.company-logo {
+  width: auto; 
+  height: auto; 
+  max-height: 50px; 
+  border-radius: 8px;
+}
