--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,15 @@ h1, h2, h3, h4, h5, h6 {
 #header #logo img {
   padding: 0;
   margin: 0;
+  height: auto;
+  width: auto;
   max-height: 40px;
+}
+
+@media (max-width: 768px) {
+  #header #logo img {
+    max-height: 25px; /* Reduce logo size for smaller screens */
+  }
 }
 
 /*--------------------------------------------------------------
